--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="info__icon icon--4">
           <i class="fas fa-shipping-fast"></i>
         </div>
-        <div class="info__header">
+        <div class="info__header header--4">
           SKLEP ONLINE
         </div>
         <p>
