ZE-Hero : Zmiana klasy hero__button

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div class="hero__wrapper">
     <header class="hero">
       <h1 class="hero__title">ZdrowEat - Zdrowie jest cool!</h1>
-      <div class="button">
+      <div class="hero__button">
         <button type="button" class="btn btn-outline-dark btn-lg"><a href="#news" class="link__button">Zapisz
             się</a></button>
       </div>
