ZE-aboutUs - dodanie ostylowania sekcji aboutUs__name i korekta index.html

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <div data-aos="flip-left">
           <div class="photo photo--1"></div>
         </div>
-        <div class="about_Us__name">
+        <div class="aboutUs__name">
           IMIĘ NAZWISKO
         </div>
         <p>
@@ -204,7 +204,7 @@
         <div data-aos="flip-left">
           <div class="photo photo--2"></div>
         </div>
-        <div class="about_Us__name">
+        <div class="aboutUs__name">
           IMIĘ NAZWISKO
         </div>
         <p>
@@ -231,7 +231,7 @@
         <div data-aos="flip-left">
           <div class="photo photo--3"></div>
         </div>
-        <div class="about_Us__name">
+        <div class="aboutUs__name">
           IMIĘ NAZWISKO
         </div>
         <p>
@@ -258,7 +258,7 @@
         <div data-aos="flip-left">
           <div class="photo photo--4"></div>
         </div>
-        <div class="about_Us__name">
+        <div class="aboutUs__name">
           MACIEJ LANGOWSKI
         </div>
         <p>
