ZE-aboutUs - dodanie ostylowania sekcji aboutUs__social oraz korekta paddingu - aboutUs__content

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           <div class="photo photo--1"></div>
         </div>
         <div class="aboutUs__name">
-          IMIĘ NAZWISKO
+          KARINA MIERNIK
         </div>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
@@ -186,15 +186,14 @@
           blanditiis? Pariatur maxime qui soluta est ipsa, itaque totam sunt
           modi eos!
         </p>
-        <div class=social>
-​
-          <a href="https://www.facebook.com/" target="_blank" class="social__facebook">
+        <div class="aboutUs__social">
+          <a href="https://www.facebook.com/" class="social__facebook">
             <i class="fab fa-facebook"></i>
           </a>
-          <a href="https://www.instagram.com/" target="_blank" class="social__instagram">
+          <a href="https://www.instagram.com/" class="social__instagram">
             <i class="fab fa-instagram"></i>
           </a>
-          <a href="https://www.twitter.com/" target="_blank" class="social__twitter">
+          <a href="https://www.twitter.com/" class="social__twitter">
             <i class="fab fa-twitter"></i>
           </a>
 ​
@@ -205,7 +204,7 @@
           <div class="photo photo--2"></div>
         </div>
         <div class="aboutUs__name">
-          IMIĘ NAZWISKO
+          PAULINA MALINOWSKA
         </div>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
@@ -213,15 +212,14 @@
           blanditiis? Pariatur maxime qui soluta est ipsa, itaque totam sunt
           modi eos!
         </p>
-        <div class=social>
-​
-          <a href="https://www.facebook.com/" target="_blank" class="social__facebook">
+        <div class="aboutUs__social">
+​          <a href="https://www.facebook.com/" class="social__facebook">
             <i class="fab fa-facebook"></i>
           </a>
-          <a href="https://www.instagram.com/" target="_blank" class="social__instagram">
+          <a href="https://www.instagram.com/" class="social__instagram">
             <i class="fab fa-instagram"></i>
           </a>
-          <a href="https://www.twitter.com/" target="_blank" class="social__twitter">
+          <a href="https://www.twitter.com/" class="social__twitter">
             <i class="fab fa-twitter"></i>
           </a>
 ​
@@ -232,7 +230,7 @@
           <div class="photo photo--3"></div>
         </div>
         <div class="aboutUs__name">
-          IMIĘ NAZWISKO
+          MICHAŁ MARCHEWA
         </div>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
@@ -240,15 +238,14 @@
           blanditiis? Pariatur maxime qui soluta est ipsa, itaque totam sunt
           modi eos!
         </p>
-        <div class=social>
-​
-          <a href="https://www.facebook.com/" target="_blank" class="social__facebook">
+        <div class="aboutUs__social">
+​          <a href="https://www.facebook.com/" class="social__facebook">
             <i class="fab fa-facebook"></i>
           </a>
-          <a href="https://www.instagram.com/" target="_blank" class="social__instagram">
+          <a href="https://www.instagram.com/" class="social__instagram">
             <i class="fab fa-instagram"></i>
           </a>
-          <a href="https://www.twitter.com/" target="_blank" class="social__twitter">
+          <a href="https://www.twitter.com/" class="social__twitter">
             <i class="fab fa-twitter"></i>
           </a>
 ​
@@ -264,17 +261,17 @@
         <p>
           Projektant konstrukcji stalowych. <br>Prywatnie - fan niezdrowego jedzenia, który pod
           wpływem nacisków i rosnącej masy ciała szuka smakowitych alternatyw dla ociekających
-          tłuszczem mięsiw. 
+          tłuszczem mięsiw.
         </p>
-        <div class=social>
-​
-          <a href="https://www.facebook.com/profile.php?id=100001241411262" target="_blank" class="social__facebook">
+
+        <div class="aboutUs__social">
+          <a href="https://www.facebook.com/profile.php?id=100001241411262" class="social__facebook">
             <i class="fab fa-facebook"></i>
           </a>
-          <a href="https://www.instagram.com/" target="_blank" class="social__instagram">
+          <a href="https://www.instagram.com/" class="social__instagram">
             <i class="fab fa-instagram"></i>
           </a>
-          <a href="https://www.twitter.com/" target="_blank" class="social__twitter">
+          <a href="https://www.twitter.com/" class="social__twitter">
             <i class="fab fa-twitter"></i>
           </a>
 ​
