ZE-Dodatkowe - dodano ikony, tytuły w index.html

--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="pl">
 ​
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="main.css" />
   <link rel="stylesheet" href="variables.css" />
   <link rel="stylesheet" href="fontawesome/css/all.css" />
-    <link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <title>Zdroweat</title>
 </head>
 ​
+
 <body>
   <div id="dom"></div>
   <nav class="menu">
@@ -32,7 +34,7 @@
       </li>
     </ul>
   </nav>
-​
+  ​
   <div class="hero__wrapper">
     <header class="hero">
       <h1 class="hero__title">ZdrowEat - Zdrowie jest cool!</h1>
@@ -42,7 +44,7 @@
       </div>
     </header>
   </div>
-​
+  ​
   <div class="container" id="container">
     <section class="info" id="info">
       <div class="info__item info--1">
@@ -54,12 +56,12 @@
         </div>
         <p>
           Burger z pokrzywy? Pita z falafelem? Na miejscu, czy z dowozem?
-          Nasza interaktywna mapa pozwoli Ci znaleźć to, na co masz ochotę! 
-          U nas możesz szukać knajpek według lokalizacji lub po nazwie dania. 
+          Nasza interaktywna mapa pozwoli Ci znaleźć to, na co masz ochotę!
+          U nas możesz szukać knajpek według lokalizacji lub po nazwie dania.
           <br>Zdrowa kuchnia w Trójmieście nie ma przed nami żadnych tajemnic!
         </p>
       </div>
-​
+      ​
       <div class="info__item info--2">
         <div class="info__icon icon--2">
           <i class="fas fa-book-open"></i>
@@ -70,12 +72,12 @@
         <p>
           Każdy czasem chce coś ugotować sam. Kiedy w głowie pustka i pomysłów
           brak, ZdrowEat przychodzi z odsieczą! Sałatki, power bowle, burgery
-          roślinne -  u nas znajdziesz sprawdzone przepisy, dzięki którym
+          roślinne - u nas znajdziesz sprawdzone przepisy, dzięki którym
           Twoja dieta będzie smaczna i zbilansowana. <br>
           Gotój zdrowo - żyj zdrowo!
         </p>
       </div>
-​
+      ​
       <div class="info__item info--3">
         <div class="info__icon icon--3">
           <i class="fas fa-store"></i>
@@ -87,11 +89,11 @@
           Znalazłeś już swój wymarzony przepis. Gotujesz. Smaki i aromaty tworzą
           idealną harmonię. Już tylko ostatnie składniki. Ale zaraz... Gdzie znaleźć
           płatki drożdżowe? Gdzie szukać mąki jaglanej? <br> W tej sekcji poznasz odpowiedzi
-          na te pytania. <br> Sklepy ze zdrową żywnością w Trójmieście - tylko 
+          na te pytania. <br> Sklepy ze zdrową żywnością w Trójmieście - tylko
           na ZdrowEat!
         </p>
       </div>
-​
+      ​
       <div class="info__item info--4">
         <div class="info__icon icon--4">
           <i class="fas fa-shipping-fast"></i>
@@ -101,8 +103,8 @@
         </div>
         <p>
           Sklep zamknęli Ci przed nosem? Trwa wojna lub pandemia? Nie łam się -
-           sprawdź nasz sklep online! Oferujemy szeroki asortyment produktów BIO od sprawdzonych dostawców. 
-          Jesteśmy czynni 24h na dobę, 7 dni w tygodniu dostawy realizujemy bezpłatnie w ciągu 
+          sprawdź nasz sklep online! Oferujemy szeroki asortyment produktów BIO od sprawdzonych dostawców.
+          Jesteśmy czynni 24h na dobę, 7 dni w tygodniu dostawy realizujemy bezpłatnie w ciągu
           1 doby od zamówienia. <br> Sprawdź nas!
         </p>
       </div>
@@ -110,6 +112,11 @@
     <section class="moreInfo" id="more">
       <div class="moreInfoBox">
         <div data-aos="fade-right">
+          <div class="moreInfo__icon moreIcon">
+            <i class=""></i>
+          </div>
+          <div class="moreInfo__header">
+          </div>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa
           possimus nobis ducimus consectetur omnis maiores sit repellendus
           pariatur a libero eaque hic ad exercitationem dolorum sequi vero,
@@ -118,6 +125,11 @@
       </div>
       <div class="moreInfoBox">
         <div data-aos="fade-left">
+          <div class="moreInfo__icon moreIcon">
+            <i class=""></i>
+          </div>
+          <div class="moreInfo__header">
+          </div>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
           eligendi, quis voluptates atque delectus nobis dignissimos. Nisi
           optio adipisci similique dolor debitis natus reiciendis esse! Atque
@@ -126,6 +138,11 @@
       </div>
       <div class="moreInfoBox">
         <div data-aos="fade-right">
+          <div class="moreInfo__icon moreIcon">
+            <i class=""></i>
+          </div>
+          <div class="moreInfo__header">
+          </div>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia unde,
           esse doloremque consequatur doloribus deleniti temporibus fuga
           ducimus iure! Non dolorum, cum esse explicabo repellendus ullam quam
@@ -134,6 +151,11 @@
       </div>
       <div class="moreInfoBox">
         <div data-aos="fade-left">
+          <div class="moreInfo__icon moreIcon">
+            <i class=""></i>
+          </div>
+          <div class="moreInfo__header">
+          </div>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
           nobis, repellat ab perferendis dicta ducimus eveniet dolores sequi
           quia dolorem iure impedit, voluptatibus aliquam enim laudantium,
@@ -150,6 +172,11 @@
       </div>
       <div class="moreInfoBox">
         <div data-aos="fade-left">
+          <div class="moreInfo__icon moreIcon">
+            <i class=""></i>
+          </div>
+          <div class="moreInfo__header">
+          </div>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
           laudantium officiis ea ipsa eos quae nobis debitis, esse tempora
           facere voluptatum tenetur at quibusdam ex quod! Ullam doloribus
@@ -158,6 +185,11 @@
       </div>
       <div class="moreInfoBox">
         <div data-aos="fade-right">
+          <div class="moreInfo__icon moreIcon">
+            <i class=""></i>
+          </div>
+          <div class="moreInfo__header">
+          </div>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit.
           Consequatur reiciendis eos ipsa repellendus dicta recusandae,
           incidunt accusamus accusantium consectetur optio vero distinctio
@@ -166,6 +198,11 @@
       </div>
       <div class="moreInfoBox">
         <div data-aos="fade-left">
+          <div class="moreInfo__icon moreIcon">
+            <i class=""></i>
+          </div>
+          <div class="moreInfo__header">
+          </div>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
           placeat delectus vitae nobis nesciunt officiis id ad ipsum
           voluptatum perspiciatis suscipit sed, sapiente unde error, aut
@@ -173,7 +210,7 @@
         </div>
       </div>
     </section>
-​
+    ​
     <section class="aboutUs" id="about">
       <div class="aboutUs__content content--1">
         <div data-aos="flip-left">
@@ -189,7 +226,7 @@
           modi eos!
         </p>
         <div class=social>
-​
+          ​
           <a href="https://www.facebook.com/" target="_blank" class="social__facebook">
             <i class="fab fa-facebook"></i>
           </a>
@@ -199,7 +236,7 @@
           <a href="https://www.twitter.com/" target="_blank" class="social__twitter">
             <i class="fab fa-twitter"></i>
           </a>
-​
+          ​
         </div>
       </div>
       <div class="aboutUs__content content--2">
@@ -216,7 +253,7 @@
           modi eos!
         </p>
         <div class=social>
-​
+          ​
           <a href="https://www.facebook.com/" target="_blank" class="social__facebook">
             <i class="fab fa-facebook"></i>
           </a>
@@ -226,7 +263,7 @@
           <a href="https://www.twitter.com/" target="_blank" class="social__twitter">
             <i class="fab fa-twitter"></i>
           </a>
-​
+          ​
         </div>
       </div>
       <div class="aboutUs__content content--3">
@@ -243,7 +280,7 @@
           modi eos!
         </p>
         <div class=social>
-​
+          ​
           <a href="https://www.facebook.com/" target="_blank" class="social__facebook">
             <i class="fab fa-facebook"></i>
           </a>
@@ -253,7 +290,7 @@
           <a href="https://www.twitter.com/" target="_blank" class="social__twitter">
             <i class="fab fa-twitter"></i>
           </a>
-​
+          ​
         </div>
       </div>
       <div class="aboutUs__content content--4">
@@ -266,10 +303,10 @@
         <p>
           Projektant konstrukcji stalowych. <br>Prywatnie - fan niezdrowego jedzenia, który pod
           wpływem nacisków i rosnącej masy ciała szuka smakowitych alternatyw dla ociekających
-          tłuszczem mięsiw. 
+          tłuszczem mięsiw.
         </p>
         <div class=social>
-​
+          ​
           <a href="https://www.facebook.com/profile.php?id=100001241411262" target="_blank" class="social__facebook">
             <i class="fab fa-facebook"></i>
           </a>
@@ -279,17 +316,17 @@
           <a href="https://www.twitter.com/" target="_blank" class="social__twitter">
             <i class="fab fa-twitter"></i>
           </a>
-​
+          ​
         </div>
       </div>
     </section>
-​
+    ​
     <footer class="newsletter" id="news">
       <div class="newsletter__wrapper">
-​
+        ​
         <div class="newsletter__input">
           <p>Zapisz się do Newslettera!</p>
-​
+          ​
           <section class="newsletter__input name">
             <label class="sr-only" for="name"></label>
             <input type="text" name="name" id="name" data-msg-rewuired="Proszę wpisać imię." value placeholder="Imię" />
@@ -303,23 +340,24 @@
             <input type="submit" value="Wyślij" class="btn btn-default btn-block" data-loading-text="Loading..." />
           </section>
         </div>
-​
+        ​
         <div class="newsletter__top">
           <a href="#top" class="newsletter__top__item">
-              <i class="fas fa-arrow-circle-up">  GO UP</i>
+            <i class="fas fa-arrow-circle-up"> GO UP</i>
           </a>
+        </div>
       </div>
-      </div>
-​
-      
-​
-      </div>
-    </footer>
+      ​
+
+      ​
   </div>
-​
+  </footer>
+  </div>
+  ​
   <script>
     AOS.init();
   </script>
 </body>
 ​
+
 </html>
