ZE-Dodatkowe - dodano tekst w moreInfo

--- a/index.html
+++ b/index.html
@@ -116,11 +116,13 @@
             <i class=""></i>
           </div>
           <div class="moreInfo__header">
+            Promocje
           </div>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa
-          possimus nobis ducimus consectetur omnis maiores sit repellendus
-          pariatur a libero eaque hic ad exercitationem dolorum sequi vero,
-          totam ex quibusdam.
+          <p>Koniec z wymówkami, że jak zdrowo to zaraz drogo! Tylko u nas możesz zdobyć atrakcyjne kody rabatowe do
+            restauracji jak również do sklepów ze zdrową żywnością. </p>
+          <p>Mało tego - jeśli zapiszesz się na nasz Newsletter otrzymasz na start 10% rabatu na nasz
+            asortyment! </p>
+          <p>Nie przegap takiej okazji!</p>
         </div>
       </div>
       <div class="moreInfoBox">
@@ -129,11 +131,13 @@
             <i class=""></i>
           </div>
           <div class="moreInfo__header">
+            Kupuj lokalnie
           </div>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
-          eligendi, quis voluptates atque delectus nobis dignissimos. Nisi
-          optio adipisci similique dolor debitis natus reiciendis esse! Atque
-          quae laboriosam voluptatem numquam?
+          <p>Masz dosyć przetworzonej żywności? Po powrocie ze sklepu nie dają Ci spokoju myśli czy jajka były z chowu
+            klatkowego, a chleb nie spędził w zamrażarce pół roku? </p>
+          <p>Razem z nami wspieraj lokalnych producentów. Każdy z naszych dostawców posiada eko certyfikaty. Ale
+            pamiętaj - kupując u
+            nas wspierasz nie tylko lokalny biznes i ochronę środowiska, ale przede wszystkim swoje zdrowie.</p>
         </div>
       </div>
       <div class="moreInfoBox">
@@ -142,11 +146,13 @@
             <i class=""></i>
           </div>
           <div class="moreInfo__header">
+            Ekologia
           </div>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia unde,
-          esse doloremque consequatur doloribus deleniti temporibus fuga
-          ducimus iure! Non dolorum, cum esse explicabo repellendus ullam quam
-          omnis similique cupiditate!
+          <p>
+            Na zdrowej żywności nie poprzestajemy. Stosujemy wysokiej jakości jednorazowe, ekologiczne opakowania do
+            przewozu zamówień. Są to
+            przyjazne dla środowiska, w pełni biodegradowalne produkty.
+          </p>
         </div>
       </div>
       <div class="moreInfoBox">
@@ -155,32 +161,11 @@
             <i class=""></i>
           </div>
           <div class="moreInfo__header">
+            Nasi eksperci
           </div>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
-          nobis, repellat ab perferendis dicta ducimus eveniet dolores sequi
-          quia dolorem iure impedit, voluptatibus aliquam enim laudantium,
-          dolorum maiores. Quod, autem.
-        </div>
-      </div>
-      <div class="moreInfoBox">
-        <div data-aos="fade-right">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi qui
-          beatae possimus sit repellat impedit quibusdam, consectetur
-          distinctio quis inventore architecto iure sint expedita
-          consequuntur, veniam temporibus culpa omnis iste!
-        </div>
-      </div>
-      <div class="moreInfoBox">
-        <div data-aos="fade-left">
-          <div class="moreInfo__icon moreIcon">
-            <i class=""></i>
-          </div>
-          <div class="moreInfo__header">
-          </div>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
-          laudantium officiis ea ipsa eos quae nobis debitis, esse tempora
-          facere voluptatum tenetur at quibusdam ex quod! Ullam doloribus
-          excepturi sunt?
+          <p>Masz wątpliwości, który produkt spełni najlepiej Twoje oczekiwania? Którą restaurację wybrać na randkę z
+          weganką albo które mleko roślinne jest odpowiednie dla Twojej diety? Napisz do naszych Ekspertów! Nasz Zespół
+          Ci doradzi, najlepiej jak potrafi.</p>
         </div>
       </div>
       <div class="moreInfoBox">
@@ -189,11 +174,11 @@
             <i class=""></i>
           </div>
           <div class="moreInfo__header">
+            Bądź na bieżąco!
           </div>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          Consequatur reiciendis eos ipsa repellendus dicta recusandae,
-          incidunt accusamus accusantium consectetur optio vero distinctio
-          quaerat architecto, veritatis illum, cum animi labore harum!
+          <p>Zapisując się na Newsletter masz pewność, że na bieżąco będziemy Cię informować o wszystkich nowinkach
+            żywieniowych, wydarzeniach kulinarnych w Trójmieście oraz o promocjach.</p>
+          <p>Nie zwlekaj, zapisz się na Newsletter!</p>
         </div>
       </div>
       <div class="moreInfoBox">
@@ -202,11 +187,37 @@
             <i class=""></i>
           </div>
           <div class="moreInfo__header">
+            Aplikacja ZdrowEat
           </div>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
-          placeat delectus vitae nobis nesciunt officiis id ad ipsum
-          voluptatum perspiciatis suscipit sed, sapiente unde error, aut
-          itaque distinctio neque? Nulla!
+          <p>Nasza aplikacja jest prosta w obsłudze, a co najważniejsze - zupełnie darmowa!</p>
+        </div>
+      </div>
+      <div class="moreInfoBox">
+        <div data-aos="fade-right">
+          <div class="moreInfo__icon moreIcon">
+            <i class=""></i>
+          </div>
+          <div class="moreInfo__header">
+            Poznajmy się
+          </div>
+          <p>Organizujemy warsztaty i spotkania kulinarne! Jeśli jesteś ZdrowoManiakiem polub nas na facebooku, śledź
+            Newsletter i koniecznie przyjdź na jedno ze spotkań!</p>
+        </div>
+      </div>
+      <div class="moreInfoBox">
+        <div data-aos="fade-left">
+          <div class="moreInfo__icon moreIcon">
+            <i class=""></i>
+          </div>
+          <div class="moreInfo__header">
+            Bezpieczeństwo
+          </div>
+          <p>W tym trudnym czasie związanym z epidemią, staramy się Wam wyjśc na przeciw. Nie rezygnując ze zdrowych
+            przyzwyczajeń, nadal możesz zamawiać produkty w naszym sklepie i jedzenie na wynos. Możesz być pewny, że
+            dołożymy
+            wszelkich starań aby zamówienie dotarło do Ciebie z zachowaniem wszelkich zaleceń sanitarnych </p>
+          <p>Nasi dostawcy przywiezą zamówienie pod same drzwi. Bez konieczności kontaktu i spotkania twarzą w twarz.
+          </p>
         </div>
       </div>
     </section>
