ZE-Dodatkowe - Tekst dodano v2

--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
           <p>Masz dosyć przetworzonej żywności? Po powrocie ze sklepu nie dają Ci spokoju myśli czy jajka były z chowu
             klatkowego, a chleb nie spędził w zamrażarce pół roku? </p>
           <p>Razem z nami wspieraj lokalnych producentów. Każdy z naszych dostawców posiada eko certyfikaty. Ale
-            pamiętaj - kupując u
-            nas wspierasz nie tylko lokalny biznes i ochronę środowiska, ale przede wszystkim swoje zdrowie.</p>
+            pamiętaj - kupując u nas wspierasz nie tylko lokalny biznes i ochronę środowiska, ale przede wszystkim swoje zdrowie.</p>
         </div>
       </div>
       <div class="moreInfoBox">
@@ -165,7 +164,7 @@
           </div>
           <p>Masz wątpliwości, który produkt spełni najlepiej Twoje oczekiwania? Którą restaurację wybrać na randkę z
           weganką albo które mleko roślinne jest odpowiednie dla Twojej diety? Napisz do naszych Ekspertów! Nasz Zespół
-          Ci doradzi, najlepiej jak potrafi.</p>
+          Ci doradzi, najlepiej jak potrafi.
         </div>
       </div>
       <div class="moreInfoBox">
@@ -189,7 +188,7 @@
           <div class="moreInfo__header">
             Aplikacja ZdrowEat
           </div>
-          <p>Nasza aplikacja jest prosta w obsłudze, a co najważniejsze - zupełnie darmowa!</p>
+          <p>Nasza aplikacja jest prosta w obsłudze, a co najważniejsze - zupełnie darmowa! Czekaj na powiadomienie na maila. Damy Ci znać zaraz po jej premierze.</p> 
         </div>
       </div>
       <div class="moreInfoBox">
