ZE-Dodatkowe - dodano ikony

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <div class="moreInfoBox">
         <div data-aos="fade-right">
           <div class="moreInfo__icon moreIcon">
-            <i class=""></i>
+            <i class="fas fa-piggy-bank"></i>
           </div>
           <div class="moreInfo__header">
             Promocje
@@ -128,7 +128,7 @@
       <div class="moreInfoBox">
         <div data-aos="fade-left">
           <div class="moreInfo__icon moreIcon">
-            <i class=""></i>
+            <i class="fas fa-shopping-bag"></i>
           </div>
           <div class="moreInfo__header">
             Kupuj lokalnie
@@ -142,7 +142,7 @@
       <div class="moreInfoBox">
         <div data-aos="fade-right">
           <div class="moreInfo__icon moreIcon">
-            <i class=""></i>
+            <i class="fas fa-leaf"></i>
           </div>
           <div class="moreInfo__header">
             Ekologia
@@ -157,7 +157,7 @@
       <div class="moreInfoBox">
         <div data-aos="fade-left">
           <div class="moreInfo__icon moreIcon">
-            <i class=""></i>
+            <i class="fas fa-users"></i>
           </div>
           <div class="moreInfo__header">
             Nasi eksperci
@@ -170,7 +170,7 @@
       <div class="moreInfoBox">
         <div data-aos="fade-right">
           <div class="moreInfo__icon moreIcon">
-            <i class=""></i>
+            <i class="fas fa-envelope"></i>
           </div>
           <div class="moreInfo__header">
             Bądź na bieżąco!
@@ -183,7 +183,7 @@
       <div class="moreInfoBox">
         <div data-aos="fade-left">
           <div class="moreInfo__icon moreIcon">
-            <i class=""></i>
+            <i class="fas fa-mobile-alt"></i>
           </div>
           <div class="moreInfo__header">
             Aplikacja ZdrowEat
@@ -194,7 +194,7 @@
       <div class="moreInfoBox">
         <div data-aos="fade-right">
           <div class="moreInfo__icon moreIcon">
-            <i class=""></i>
+            <i class="fas fa-handshake"></i>
           </div>
           <div class="moreInfo__header">
             Poznajmy się
@@ -206,7 +206,7 @@
       <div class="moreInfoBox">
         <div data-aos="fade-left">
           <div class="moreInfo__icon moreIcon">
-            <i class=""></i>
+            <i class="fas fa-shield-alt"></i>
           </div>
           <div class="moreInfo__header">
             Bezpieczeństwo
