--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <section class="moreInfo" id="more">
       <div class="moreInfoBox">
         <div data-aos="fade-right">
-          <div class="moreInfo__icon moreIcon">
+          <div class="moreInfo__icon moreIcon--1">
             <i class="fas fa-piggy-bank"></i>
           </div>
           <div class="moreInfo__header">
@@ -127,7 +127,7 @@
       </div>
       <div class="moreInfoBox">
         <div data-aos="fade-left">
-          <div class="moreInfo__icon moreIcon">
+          <div class="moreInfo__icon moreIcon--2">
             <i class="fas fa-shopping-bag"></i>
           </div>
           <div class="moreInfo__header">
@@ -141,7 +141,7 @@
       </div>
       <div class="moreInfoBox">
         <div data-aos="fade-right">
-          <div class="moreInfo__icon moreIcon">
+          <div class="moreInfo__icon moreIcon--3">
             <i class="fas fa-leaf"></i>
           </div>
           <div class="moreInfo__header">
@@ -156,7 +156,7 @@
       </div>
       <div class="moreInfoBox">
         <div data-aos="fade-left">
-          <div class="moreInfo__icon moreIcon">
+          <div class="moreInfo__icon moreIcon--4">
             <i class="fas fa-users"></i>
           </div>
           <div class="moreInfo__header">
@@ -169,7 +169,7 @@
       </div>
       <div class="moreInfoBox">
         <div data-aos="fade-right">
-          <div class="moreInfo__icon moreIcon">
+          <div class="moreInfo__icon moreIcon--5">
             <i class="fas fa-envelope"></i>
           </div>
           <div class="moreInfo__header">
@@ -182,7 +182,7 @@
       </div>
       <div class="moreInfoBox">
         <div data-aos="fade-left">
-          <div class="moreInfo__icon moreIcon">
+          <div class="moreInfo__icon moreIcon--6">
             <i class="fas fa-mobile-alt"></i>
           </div>
           <div class="moreInfo__header">
@@ -193,7 +193,7 @@
       </div>
       <div class="moreInfoBox">
         <div data-aos="fade-right">
-          <div class="moreInfo__icon moreIcon">
+          <div class="moreInfo__icon moreIcon--7">
             <i class="fas fa-handshake"></i>
           </div>
           <div class="moreInfo__header">
@@ -205,7 +205,7 @@
       </div>
       <div class="moreInfoBox">
         <div data-aos="fade-left">
-          <div class="moreInfo__icon moreIcon">
+          <div class="moreInfo__icon moreIcon--8">
             <i class="fas fa-shield-alt"></i>
           </div>
           <div class="moreInfo__header">
