ZE-Dodatkowe - dodano tekst w index.html

--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@
           </div>
           <p>Masz dosyć przetworzonej żywności? Po powrocie ze sklepu nie dają Ci spokoju myśli czy jajka były z chowu
             klatkowego, a chleb nie spędził w zamrażarce pół roku? </p>
-          <p>Razem z nami wspieraj lokalnych producentów. Każdy z naszych dostawców posiada eko certyfikaty. Ale
-            pamiętaj - kupując u nas wspierasz nie tylko lokalny biznes i ochronę środowiska, ale przede wszystkim swoje zdrowie.</p>
+          <p>Razem z nami wspieraj lokalnych producentów. Kupując u nas wspierasz nie tylko lokalny biznes i ochronę środowiska, ale przede wszystkim swoje zdrowie.</p>
         </div>
       </div>
       <div class="moreInfoBox">
@@ -162,8 +161,7 @@
           <div class="moreInfo__header">
             Nasi eksperci
           </div>
-          <p>Masz wątpliwości, który produkt spełni najlepiej Twoje oczekiwania? Którą restaurację wybrać na randkę z
-          weganką albo które mleko roślinne jest odpowiednie dla Twojej diety? Napisz do naszych Ekspertów! Nasz Zespół
+          <p>Masz wątpliwości, który produkt spełni najlepiej Twoje oczekiwania? Którą restaurację wybrać albo które mleko roślinne jest odpowiednie dla Twojej diety? Napisz do naszych Ekspertów! Nasz Zespół
           Ci doradzi, najlepiej jak potrafi.
         </div>
       </div>
@@ -212,11 +210,8 @@
             Bezpieczeństwo
           </div>
           <p>W tym trudnym czasie związanym z epidemią, staramy się Wam wyjśc na przeciw. Nie rezygnując ze zdrowych
-            przyzwyczajeń, nadal możesz zamawiać produkty w naszym sklepie i jedzenie na wynos. Możesz być pewny, że
-            dołożymy
-            wszelkich starań aby zamówienie dotarło do Ciebie z zachowaniem wszelkich zaleceń sanitarnych </p>
-          <p>Nasi dostawcy przywiezą zamówienie pod same drzwi. Bez konieczności kontaktu i spotkania twarzą w twarz.
-          </p>
+            przyzwyczajeń, nadal możesz zamawiać produkty w naszym sklepie i jedzenie na wynos - zapewniamy zachowanie wszelkich zaleceń sanitarnych </p>
+        
         </div>
       </div>
     </section>
