ZE-Dodatkowe - dodano tytuł i wrapper

--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
       </div>
     </section>
     <section class="moreInfo" id="more">
+      <div class="moreInfo__title">Dowiedz się więcej</div>
+      <div class="moreInfo__wrapper">
       <div class="moreInfoBox">
         <div data-aos="fade-right">
           <div class="moreInfo__icon moreIcon--1">
@@ -214,6 +216,7 @@
         
         </div>
       </div>
+    </div>
     </section>
     ​
     <section class="aboutUs" id="about">
