ZE-AboutUs: Dodanie opisu Paulina Malinowska

--- a/index.html
+++ b/index.html
@@ -207,10 +207,7 @@
           PAULINA MALINOWSKA
         </div>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
-          velit magni quo consequuntur doloremque corporis ipsum et tenetur
-          blanditiis? Pariatur maxime qui soluta est ipsa, itaque totam sunt
-          modi eos!
+          Inżynier przygody, który na codzień nadzoruje budynki z betonu, a w wolnej chwili ogląda tajlandzkie seriale i rysuje przystojnych panów. Totalny freak fantastyki spędzający większą część dnia w obłokach.
         </p>
         <div class="aboutUs__social">
 ​          <a href="https://www.facebook.com/" class="social__facebook">
