--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   ​
   <div class="hero__wrapper">
     <header class="hero">
-      <h1 class="hero__title">ZdrowEat - Zdrowie jest cool!</h1>
+      <div class="hero__logo"><img class="logo" src="Identyfikacja/logo_1.png" alt=""></div>
       <div class="hero__button">
         <button type="button" class="btn btn-outline-dark btn-lg"><a href="#news" class="link__button">Zapisz
             się</a></button>
