--- a/index.html
+++ b/index.html
@@ -335,12 +335,11 @@
     </section>
     ​
     <footer class="newsletter" id="news">
-      <!-- <div class="newsletter__wrapper"> -->
-        ​
+      <!-- <div class="newsletter__wrapper">  -->
         <div class="newsletter__input">
-          <div class="newsletter__title"><h3>Zapisz się do Newslettera!</h3>
+          <div class="newsletter__title"><p>Zapisz się do Newslettera!</p>
           </div>
-          <p>Skorzystaj z poniższego formularza, aby być na bieżąco z wszystkimi informacjami dotyczącymi aplikacji. Biorąc udział w zapisie uzyskasz przedpremierowy dostęp do  ZdrowEat!</p>
+          <p>Skorzystaj z poniższego formularza, aby być na bieżąco z wszystkimi informacjami dotyczącymi aplikacji. </p> <p>Biorąc udział w zapisie uzyskasz przedpremierowy dostęp do  ZdrowEat!</p>
           ​
           <section class="newsletter__input name">
             <label class="sr-only" for="name"></label>
@@ -361,7 +360,7 @@
             <i class="fas fa-arrow-circle-up"> GO UP</i>
           </a>
         </div>
-      <!-- </div> -->
+      <!-- </div>  -->
       ​
 
       ​
