ZE-Formularz: dodanie boxa z zatwierdzeniem Rodo

--- a/index.html
+++ b/index.html
@@ -350,6 +350,10 @@
             <input type="text" name="mail" id="mail" data-msg-rewuired="Proszę wpisać adres e-mail." value
               placeholder="E-mail" />
           </section>
+          <div class="newsletter__input box">
+          <input type="checkbox" name="my-checkbox" id="opt-in">
+          <label for="opt-in">Wyrażam zgodę na otrzymywanie informacji handlowych drogą elektroniczną na podany powyżej adres poczty elektronicznej wysyłanych przez ZdrowEat</label>
+        </div>
           <section class="newsletter__input submission">
             <input type="submit" value="Wyślij" class="btn btn-default btn-block" data-loading-text="Loading..." />
           </section>
