ZE-Formularz - dodanie klas

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
     ​
     <footer class="newsletter" id="news">
       <!-- <div class="newsletter__wrapper">  -->
-        <div class="newsletter__input">
+        <div class="newsletter__wrapper">
           <div class="newsletter__title"><p>Zapisz się do Newslettera!</p>
           </div>
           <p>Skorzystaj z poniższego formularza, aby być na bieżąco z wszystkimi informacjami dotyczącymi aplikacji. </p> <p>Biorąc udział w zapisie uzyskasz przedpremierowy dostęp do  ZdrowEat!</p>
