ZE-Formularz - stylowanie ikonki

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
         ​
         <div class="newsletter__top">
           <a href="#top" class="newsletter__top__item">
-            <i class="fas fa-arrow-circle-up"> GO UP</i>
+            <i class="fas fa-arrow-circle-up"> Do góry</i>
           </a>
         </div>
       <!-- </div>  -->
