--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 ​
 
 <body>
-  <div id="dom"></div>
-  <nav class="menu">
+
+  <nav class="menu" id="dom">
     <ul class="menu__list">
       <li class="menu__button menu--home">
         <a href="#dom" class="link">HOME</a>
